<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity">

    <TableLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vehicle_id"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_vehicle_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vehicle_name"

                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_vehicle_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"


                />
        </TableRow>

    </TableLayout>

    <Space
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_below="@id/tablayout" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space1"
        android:text="@string/title_activity_service_history"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/textViewTitle"
        android:layout_centerVertical="true"
        android:background="#ffffff" />


    <ListView
        android:id="@+id/listAllHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewTitle" />


</RelativeLayout>

    <!--</ScrollView>-->

    <!--</ScrollView>--><!-- From: file:/D:/latihan/ServiceHistory/app/src/main/res/layout/menu_layout.xml -->

    <!--</ScrollView>-->
